--- a/lab06/lab06contact.html
+++ b/lab06/lab06contact.html
@@ -3,11 +3,11 @@
         <head>
             <meta charset="utf-8">
             <title>Contact</title>
-            <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="styles.css">
 
         </head>
         <body>
-            <h1>Contact</h1>
+            <h1 class="special">Contact</h1>
             <p>Nicolette Angelotti<br>
                621 Walnut Ave<br>
                Syracuse, NY 13244
