--- a/lab09/index.html
+++ b/lab09/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
         <style>
-            .img1{float:left;margin-right: 10px;}
+            .img1{float:left;margin-right: 10px;max-width: 100%;}
             .clear{clear:both;}
             .text1{float:right;}
             .copy1{float:left;}
