--- a/lab09/lab06skills.html
+++ b/lab09/lab06skills.html
@@ -2,6 +2,8 @@
 <html>
     <head>
     <meta charset="utf-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title> Lab04 </title>    
     <link rel="stylesheet" href="styles.css">   
         <style>
