--- a/projectfiles/intro.html
+++ b/projectfiles/intro.html
@@ -15,6 +15,11 @@
         
         <a href="https://perchance.org/compliments-4-u">Things You Need To Hear</a>
 
+        <h3>More</h3>
+        <a href="https://nicangelotti.github.io/ist263/projectfiles/community.html ">Girls Supporting Girls</a> | <br>
+        <a href="https://nicangelotti.github.io/ist263/projectfiles/soluntions.html ">Express Yourself</a>
+
+
         <h2>Book Recomendations</h2>
         <ul>
             <li>When you are feeling: <strong>Trapped</strong> , Read Stop Missing Your Life – Cory Muscara  </li>
