--- a/projectfiles/soluntions.html
+++ b/projectfiles/soluntions.html
@@ -2,24 +2,32 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Women's Wellness</title>    
+        <title>Women's Wellness</title>   
+        <link rel="stylesheet" href="projectcss.css"> 
     </head>
     <body>
         <h1> Write it, read it, burn it… </h1>
+        <h3>More</h3>
+        <a href="https://nicangelotti.github.io/ist263/projectfiles/intro.html ">Home</a> | <br>
+        <a href="https://nicangelotti.github.io/ist263/projectfiles/community.html ">Express Yourself</a> <br>
+
+
         <textarea id="Nicolette" name="Nicolette" rows="4" cols="50">
             Type Away & Let Loose
             </textarea>
 
-            <img src="../project/media/picture10.jpg" alt="Tennis">
-            <img src="../project/media/picture11.jpg" alt="Ocean">
-            <img src="../project/media/picture12.jpg" alt="Guitar">
-            <img src="../project/media/picture13.jpg" alt="Couple Yoga">
-            <img src="../project/media/picture14.jpg" alt="Yoga">
-            <img src="../project/media/picture15.jpg" alt="masks">
-            <img src="../project/media/picture16.jpg" alt="Journal">
-            <img src="../project/media/picture17.jpg" alt="Collaborative">
-            <img src="../project/media/picture18.jpg" alt="Plank">
-            <img src="../project/media/picture19.jpg" alt="Dog and woman on sand">
+            <div id="images" >
 
+            <img src="../project/media/picture10.jpg" alt="Tennis" style="width:250px;">
+            <img src="../project/media/picture11.jpg" alt="Ocean" style="width:250px;">
+            <img src="../project/media/picture12.jpg" alt="Guitar" style="width:250px;">
+            <img src="../project/media/picture13.jpg" alt="Couple Yoga" style="width:250px;">
+            <img src="../project/media/picture14.jpg" alt="Yoga" style="width:250px;">
+            <img src="../project/media/picture15.jpg" alt="masks" style="width:250px;">
+            <img src="../project/media/picture16.jpg" alt="Journal" style="width:250px;">
+            <img src="../project/media/picture17.jpg" alt="Collaborative" style="width:250px;">
+            <img src="../project/media/picture18.jpg" alt="Plank" style="width:250px;">
+            <img src="../project/media/picture19.jpg" alt="Dog and woman on sand" style="width:250px;"> 
+            </div>
     </body>
 </html>
