--- a/projectfiles/intro.html
+++ b/projectfiles/intro.html
@@ -3,6 +3,7 @@
         <head>
             <meta charset="utf-8">
             <title>Women's Wellness</title>
+            <link rel="stylesheet" href="projectcss.css">
             
         </head>
 
@@ -44,10 +45,10 @@
                 j.	On a scale of 1 to 10, how content are you?
             </p>
 
-            <img src="../project/media/picture1.jpg" alt="Beach">
-            <img src="../project/media/picture2.jpg" alt="Paint">
-            <img src="../project/media/picture3.jpg" alt="Man">
-            <img src="../project/media/picture4.jpg" alt="Dog">
+            <img src="../project/media/picture1.jpg" alt="Beach" style="width:250px;">
+            <img src="../project/media/picture2.jpg" alt="Paint" style="width:250px;">
+            <img src="../project/media/picture3.jpg" alt="Man" style="width:250px;">
+            <img src="../project/media/picture4.jpg" alt="Dog" style="width:250px;">
 
 
 
