--- a/projectfiles/intro.html
+++ b/projectfiles/intro.html
@@ -33,17 +33,20 @@
         </ul>
 
             <h3>Express Yourself</h3>
-            <p>
-                b.	What are your honest feelings about the day… Would you repeat it? What would you change? <br>
-                c.	How are you feeling about tomorrow?<br>
-                d.	What is one thing you’re grateful for right now?<br>
-                e.	Did you do anything that brought you personal joy?<br>
-                f.	Did anyone contribute to your day and a negative way or a positive way?<br>
-                g.	Do you feel like your emotions are valid? Remind her no one can tell you how to feel.<br>
-                h.	Did you apologize for something that you didn’t do and wasn’t wrong?<br>
-                i.	Are you confident in the person you were today? Or are you fatigued from putting on a façade?<br>
-                j.	On a scale of 1 to 10, how content are you?
-            </p>
+            <ul>
+               <li> What are your honest feelings about the day… Would you repeat it? What would you change?</li>
+               <li> How are you feeling about tomorrow?</li>
+               <li> What is one thing you’re grateful for right now?</li>
+               <li> Did you do anything that brought you personal joy?</li>
+               <li> Did anyone contribute to your day and a negative way or a positive way?</li>
+               <li> Do you feel like your emotions are valid? Remind her no one can tell you how to feel.</li>
+               <li> Did you apologize for something that you didn’t do and wasn’t wrong?</li>
+               <li> Are you confident in the person you were today? Or are you fatigued from putting on a façade?</li>
+               <li> On a scale of 1 to 10, how content are you?</li>
+
+            </ul>
+
+    
 
             <img src="../project/media/picture1.jpg" alt="Beach" style="width:250px;">
             <img src="../project/media/picture2.jpg" alt="Paint" style="width:250px;">
