--- a/projectfiles/soluntions.html
+++ b/projectfiles/soluntions.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head></head>
         <meta charset="utf-8">
-        <title>Women's Wellness</title>   
+        <div id="heading">
+        <title>Women's Wellness</title>  
+        </div> 
         <link rel="stylesheet" href="projectcss.css"> 
+    <style>
+        .textbox{float:left; margin-top: 10px;}
+        .images{float:left;}
+    </style>
+        
     </head>
     <body>
         <h1> Write it, read it, burn it… </h1>
@@ -11,23 +18,56 @@
         <a href="https://nicangelotti.github.io/ist263/projectfiles/intro.html ">Home</a> | <br>
         <a href="https://nicangelotti.github.io/ist263/projectfiles/community.html ">Express Yourself</a> <br>
 
-
+        <div id="textbox">
         <textarea id="Nicolette" name="Nicolette" rows="4" cols="50">
             Type Away & Let Loose
             </textarea>
+        </div>
+
+        <form>
+            <input type="submit">
+        </form>
 
             <div id="images" >
-
+                <div id ="tennis">
             <img src="../project/media/picture10.jpg" alt="Tennis" style="width:250px;">
+                </div>
+
+                <div id="ocean">
             <img src="../project/media/picture11.jpg" alt="Ocean" style="width:250px;">
+                </div>  
+
+                <div id="guitar">
             <img src="../project/media/picture12.jpg" alt="Guitar" style="width:250px;">
+                </div>
+
+                <div id="coupleyoga">
             <img src="../project/media/picture13.jpg" alt="Couple Yoga" style="width:250px;">
+                </div>
+
+                <div id="yoga">
             <img src="../project/media/picture14.jpg" alt="Yoga" style="width:250px;">
+                </div>
+
+                <div id="masks">
             <img src="../project/media/picture15.jpg" alt="masks" style="width:250px;">
+                </div>
+
+                <div id="journal">
             <img src="../project/media/picture16.jpg" alt="Journal" style="width:250px;">
+                 </div>
+
+                 <div id="collab">
             <img src="../project/media/picture17.jpg" alt="Collaborative" style="width:250px;">
+                </div>
+
+                <div id="plank">
             <img src="../project/media/picture18.jpg" alt="Plank" style="width:250px;">
+                </div>
+
+                <div id="dogsand">
             <img src="../project/media/picture19.jpg" alt="Dog and woman on sand" style="width:250px;"> 
+                 </div>
             </div>
     </body>
 </html>
