--- a/projectfiles/soluntions.html
+++ b/projectfiles/soluntions.html
@@ -19,14 +19,13 @@
         <a href="https://nicangelotti.github.io/ist263/projectfiles/community.html ">Express Yourself</a> <br>
 
         <div id="textbox">
-        <textarea id="Nicolette" name="Nicolette" rows="4" cols="50">
-            Type Away & Let Loose
-            </textarea>
-        </div>
-
         <form>
-            <input type="submit">
+            <textarea id="Nicolette" name="Nicolette" rows="4" cols="50">
+                Type Away & Let Loose
+                </textarea> <br>
+            <input type="submit"> 
         </form>
+        </div>
 
             <div id="images" >
                 <div id ="tennis">
