--- a/projectfiles/intro.html
+++ b/projectfiles/intro.html
@@ -4,6 +4,7 @@
             <meta charset="utf-8">
             <title>Women's Wellness</title>
             <link rel="stylesheet" href="projectcss.css">
+            <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
             
         </head>
 
