--- a/projectfiles/community.html
+++ b/projectfiles/community.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-    <html>
+    <html lang="en">
         <head>
+
             <meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1.0">
             <title>Women's Wellness</title>
             <link rel="stylesheet" href="projectcss.css">
