--- a/projectfiles/solutions.html
+++ b/projectfiles/solutions.html
@@ -129,12 +129,15 @@
 <br>
         <div id="textbox">
         <form method="" action="">
+            <label for="Nicolette"><h1>No one will know:</h1></label> <br><br>
            <!-- action and method attrubite HELP ... leave blank--> 
             <textarea id="Nicolette" name="Nicolette" rows="4" cols="50">
                 Type Away and Let Loose
                 </textarea> <br>
-            <input type="submit"> 
+            <input type="submit" value="submit"> 
         </form>
+        
+
         </div>
      </div>
      <div class="column" id="right">
