--- a/projectfiles/intro.html
+++ b/projectfiles/intro.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
     <html lang="en">
         <head>
-            <meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1.0"> 
+            <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
             <title>Women's Wellness</title>
             <link rel="stylesheet" href="projectcss.css">
             <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -14,8 +15,8 @@
 
         <body>
             <h1>Welcome!</h1>
-            <h2 style="background-color: white;">More </h2>
-        <a href="https://nicangelotti.github.io/ist263/projectfiles/community.html "style="background-color: white;">Girls Supporting Girls</a>  <br> <br>
+            <h2 style="background-color: white;"> More </h2>
+        <a href="https://nicangelotti.github.io/ist263/projectfiles/community.html " style="background-color: white;">Girls Supporting Girls</a>  <br> <br>
         <a href="https://nicangelotti.github.io/ist263/projectfiles/solutions.html " style="background-color: white;">Express Yourself</a><br><br>
             Girls supporting girls… through the good and bad.
             This website aims to create a safe space for women to embrace mental health, and create discussion involving the stigma around women who suffer from mental health issues. Whatever it is that you are going through, you are not alone. Confidence, class, and camaraderie. 
