--- a/projectfiles/solutions.html
+++ b/projectfiles/solutions.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head></head>
-        <meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1.0">
+    <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <div id="heading">
         <title>Women's Wellness</title>  
         </div> 
