--- a/projectfiles/solutions.html
+++ b/projectfiles/solutions.html
@@ -130,7 +130,7 @@
 <br>
         <div id="textbox">
         <form method="" action="">
-            <label for="Nicolette"><h1>No one will know:</h1></label> <br><br>
+            <label for="Nicolette"><strong>No one will know:</strong></label> <br><br>
            <!-- action and method attrubite HELP ... leave blank--> 
             <textarea id="Nicolette" name="Nicolette" rows="4" cols="50">
                 Type Away and Let Loose
@@ -148,43 +148,43 @@
             <div id="images" >
                 <h1>Click Images</h1>
                 <div id ="tennis">
-            <img src="../project/media/picture10.jpg" alt="Tennis" style="width:500px;"onclick="tennisoff(); oceanson();">
+            <img src="../project/media/picture10.jpg" alt="Tennis" style="width:500px;" onclick="tennisoff(); oceanson();">
                 </div>
 
                 <div id="ocean">
-            <img src="../project/media/picture11.jpg" alt="Ocean" style="width:500px;"onclick="oceansoff(); guitaron();">
+            <img src="../project/media/picture11.jpg" alt="Ocean" style="width:500px;" onclick="oceansoff(); guitaron();">
                 </div>  
 
                 <div id="guitar">
-            <img src="../project/media/picture12.jpg" alt="Guitar" style="width:500px;"onclick="guitaroff(); coupleyogaon();">
+            <img src="../project/media/picture12.jpg" alt="Guitar" style="width:500px;" onclick="guitaroff(); coupleyogaon();">
                 </div>
 
                 <div id="coupleyoga">
-            <img src="../project/media/picture13.jpg" alt="Couple Yoga" style="width:500px;"onclick="coupleyogaoff(); yogaon();">
+            <img src="../project/media/picture13.jpg" alt="Couple Yoga" style="width:500px;" onclick="coupleyogaoff(); yogaon();">
                 </div>
 
                 <div id="yoga">
-            <img src="../project/media/picture14.jpg" alt="Yoga" style="width:500px;"onclick="yogaoff(); maskson();">
+            <img src="../project/media/picture14.jpg" alt="Yoga" style="width:500px;" onclick="yogaoff(); maskson();">
                 </div>
 
                 <div id="masks">
-            <img src="../project/media/picture15.jpg" alt="masks" style="width:500px;"onclick="masksoff(); journalon();">
+            <img src="../project/media/picture15.jpg" alt="masks" style="width:500px;" onclick="masksoff(); journalon();">
                 </div>
 
                 <div id="journal">
-            <img src="../project/media/picture16.jpg" alt="Journal" style="width:500px;"onclick="journaloff(); collabon();">
+            <img src="../project/media/picture16.jpg" alt="Journal" style="width:500px;" onclick="journaloff(); collabon();">
                  </div>
 
                  <div id="collab">
-            <img src="../project/media/picture17.jpg" alt="Collaborative" style="width:500px;"onclick="collaboff(); plankon();">
+            <img src="../project/media/picture17.jpg" alt="Collaborative" style="width:500px;" onclick="collaboff(); plankon();">
                 </div>
 
                 <div id="plank">
-            <img src="../project/media/picture18.jpg" alt="Plank" style="width:500px;"onclick="plankoff(); dogsandon();">
+            <img src="../project/media/picture18.jpg" alt="Plank" style="width:500px;" onclick="plankoff(); dogsandon();">
                 </div>
 
                 <div id="dogsand">
-            <img src="../project/media/picture19.jpg" alt="Dog and woman on sand" style="width:500px;"onclick="dogsandoff(); tennison();"> 
+            <img src="../project/media/picture19.jpg" alt="Dog and woman on sand" style="width:500px;" onclick="dogsandoff(); tennison();"> 
                  </div>
 
             </div>
